crates/keron-lang/tests/corpus/errors/check/unknown_fn_typo_suggests.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unknown function `splt`
  --> 2:27
  |
2 | val parts: List<String> = splt("a:b", ":")
  |                           ^^^^
  = help: did you mean `split`?
